# DataAgent

./: 1.txt  README.md
Client/: package-lock.json  package.json
Client/src/: App.vue  main.ts
Client/src-tauri/: tauri.conf.json
Client/src/api/: index.ts
Client/src/router/: index.ts
Client/src/stores/: auth.ts  index.ts  sync.ts
Client/src/styles/: index.css
Client/src/views/: Config.vue  Dashboard.vue  Login.vue  Users.vue
Manage/: .gitignore  README.md
Manage/backend/migrations/: 0001_initial.sql  0002_proxy_nodes.sql  0003_add_group_name.sql
Manage/backend/src/: auth.rs  db.rs  utils.rs
Manage/backend/src/handlers/: logs.rs  mod.rs  proxy.rs  user.rs
Manage/frontend/: .env.example  jsrepo.config.ts  package.json  wrangler.toml
Manage/frontend/src/api/: client.ts  proxy.ts
Manage/frontend/src/components/: SliderCaptcha.vue
Manage/frontend/src/types/: index.ts
Manage/frontend/src/views/: Login.vue  ProxyNodes.vue
backend/: Cargo.toml
backend/migrations/: 0004_subscription_info.sql
backend/src/: db.rs  jwt.rs  lib.rs  models.rs
backend/src/handlers/: auth.rs  proxy.rs
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: auth.ts  client.ts  logs.ts  proxy.ts  user.ts
frontend/src/components/animations/: CountUp.vue  (+2 more)
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: index.css
frontend/src/views/: Dashboard.vue  Login.vue  Logs.vue  Profile.vue  ProxyNodes.vue  Users.vue
(+4 files in other folders)
