[package]
name = "edge-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
hmac = "0.12"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
